[gd_scene load_steps=7 format=2]

[ext_resource path="res://textures/EndButton_01.png" type="Texture" id=1]
[ext_resource path="res://scripts/ending.gd" type="Script" id=2]
[ext_resource path="res://textures/EndScene.png" type="Texture" id=3]
[ext_resource path="res://textures/record.png" type="Texture" id=4]
[ext_resource path="res://textures/EndButton_00.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="ending" type="Node2D"]
script = ExtResource( 2 )

[node name="Texture" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="bg" type="TextureRect" parent="Texture"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 3 )

[node name="GoToTtleButton" type="TextureButton" parent="."]
margin_left = 1040.0
margin_top = 832.0
margin_right = 1912.0
margin_bottom = 1024.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="GoToTtleButton"]
position = Vector2( 432, 84 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="RecordDialog" type="TextureRect" parent="."]
margin_left = -224.0
margin_top = 464.0
margin_right = 776.0
margin_bottom = 1464.0
texture = ExtResource( 4 )

[node name="GameScoreLabel" type="Label" parent="RecordDialog"]
margin_left = 416.0
margin_top = 424.0
margin_right = 489.0
margin_bottom = 438.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "GameScoer"

[node name="ScoreLabel" type="Label" parent="RecordDialog"]
margin_left = 416.0
margin_top = 448.0
margin_right = 531.0
margin_bottom = 462.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Score: 000000000"

[node name="TimeLabel" type="Label" parent="RecordDialog"]
margin_left = 416.0
margin_top = 464.0
margin_right = 528.0
margin_bottom = 478.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Time:  00:00:0.00"

[node name="EnemyLabel" type="Label" parent="RecordDialog"]
margin_left = 416.0
margin_top = 488.0
margin_right = 591.0
margin_bottom = 502.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "parameters of the fertilized"

[node name="EnemySpeed" type="Label" parent="RecordDialog"]
margin_left = 416.0
margin_top = 512.0
margin_right = 527.0
margin_bottom = 526.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Speed: 00000000"

[node name="EnemyToughness" type="Label" parent="RecordDialog"]
margin_left = 416.0
margin_top = 528.0
margin_right = 528.0
margin_bottom = 542.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Toughness:00000"

[node name="EnemyNum" type="Label" parent="RecordDialog"]
visible = false
margin_left = 416.0
margin_top = 512.0
margin_right = 525.0
margin_bottom = 526.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Count: 00000000"

[connection signal="pressed" from="GoToTtleButton" to="." method="_on_GoToTtleButton_pressed"]
